examples/shouldfail/Shadowing.agda
module Shadowing where

postulate
  A : Set
  foo : A
  foo : A
